skin/osx/osx.css
@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");

#nav-bar {
    background-image: url('chrome://browser/skin/Toolbar-background-noise.png'), linear-gradient(#D6D6D6, #D3D3D3) !important;
}

#nav-bar:-moz-window-inactive {
    background-image: url('chrome://browser/skin/Toolbar-background-noise.png'), linear-gradient(#F2F2F2, #D3D3D3) !important;
}

#tab-view-deck {
    height: 44px !important;
}

/* Background colour for the tree sidebar (light blue when window is
   active, grey otherwise) */
.tabbrowser-tabs {
    margin: 0 !important;
    padding: 0 !important;
    background: transparent !important;
    background-color: #333 !important;
}
.tabbrowser-tabs:-moz-window-inactive {
    background-color: #333 !important;
}

.tabbrowser-arrowscrollbox > .arrowscrollbox-scrollbox {
    margin: 0 !important;
    padding: 0 !important;
}

/* Use the splitter to display the border of .tabbrowser-tabs */
#verticaltabs-splitter {
    width: 1px !important;
    min-width: 1px !important;
    background-image: none;
    background-color: #404040;
}
#verticaltabs-splitter:-moz-window-inactive {
    background-color: #868686;
}

/* Style tabs themselves.  Get rid of most of the initial XUL styling */
.tabbrowser-tab {
    -moz-box-pack: start;
    -moz-box-flex: 0;
    -moz-appearance: none !important;
    background: #333 !important;
    -moz-border-top-colors: none !important;
    -moz-border-bottom-colors: none !important;
    -moz-border-right-colors: none !important;
    -moz-border-left-colors: none !important;
    -moz-border-radius: 0 !important;
    -moz-box-align: stretch !important;
    margin: 0 !important;
    padding: 8px 3px !important;
    height: 32px !important;     /* height including border! */
    min-height: 32px !important;
    max-height: 32px !important;
    width: 100% !important;
    min-width: 100% !important;
    max-width: 100% !important;
    text-align: left !important;
    border: none;
    border-top: 1px solid rgba(255, 255, 255,0.05) !important;
    border-bottom: 1px solid rgba(0,0,0,0.15) !important;
}

/* remove curvy tab ends */
.tab-background-middle,
.tab-background-start,
.tab-background-end {
  background-image: none !important;
}

.tab-background-start[selected=true]::after,
.tab-background-start[selected=true]::before,
.tab-background-start,
.tab-background-end,
.tab-background-end[selected=true]::after,
.tab-background-end[selected=true]::before {
  display: none;
}

/* remove curvy tab ends from hovered background tabs */
.tabbrowser-tab:hover > .tab-stack > .tab-background:not([selected=true]),
.tabs-newtab-button:hover {
  background-image: none !important;
}

/* remove background tab separators */
#tabbrowser-tabs[movingtab] > .tabbrowser-tab[beforeselected]:not([last-visible-tab])::after,
.tabbrowser-tab:not([selected]):not([afterselected-visible]):not([afterhovered]):not([first-visible-tab]):not(:hover)::before,
#tabbrowser-tabs:not([overflow]) > .tabbrowser-tab[last-visible-tab]:not([selected]):not([beforehovered]):not(:hover)::after {
  background-image: none !important;
}

.tabbrowser-tab[selected="true"],
.tabbrowser-tab[multiselect="true"] {
    background: -moz-linear-gradient(top, #A0B0CF, #7386AB) repeat-x !important;
    background: #222 !important;

}
.tabbrowser-tab[selected="true"]:-moz-window-inactive,
.tabbrowser-tab[multiselect="true"]:-moz-window-inactive {
    background: -moz-linear-gradient(top, #B4B4B4, #8A8A8A) repeat-x !important;
    background: #222 !important;
}

.tab-background-start, .tab-background-middle, .tab-background-end {
    background-color: transparent !important;
}

.tab-content {
    margin-top: -1px !important;
    border-width: 0 3px 0 0 !important;
    -moz-border-image: none !important;
}

/* Keep the close button at a safe distance from the tab label. */
.tab-close-button {
    -moz-image-region: auto !important;
    display: -moz-box;
    margin-left: 3px;
    margin-top: 1px;
    background-image: url("resource://verticaltabs/skin/osx/closetab.svg") !important;
    background-position: center right;
    background-size: contain;
    background-repeat: no-repeat;
    list-style-image: none !important;
    width: 14px;
    height: 14px;
    opacity: 0.27;  /* turn black into #b9b9b9 */
}
.tab-close-button:active {
    opacity: 0.46;  /* turn black into #8a8a8a */
}
.tabbrowser-tab[selected="true"] .tab-close-button,
.tabbrowser-tab[multiselect="true"] .tab-close-button {
    background-image: url("resource://verticaltabs/skin/osx/closetab-white.svg");
    opacity: 0.8;
}

.tabbrowser-tab[selected="true"] .tab-close-button:hover,
.tabbrowser-tab[multiselect="true"] .tab-close-button:hover {
    opacity: 1;
}

.tabbrowser-tab:not(:hover):not([selected="true"]) .tab-close-button {
    visibility: collapse !important;
}

/* Always display the favicon at 100% opacity */
.tabbrowser-tab .tab-icon-image {
    opacity: 1.0 !important;
    width: 20px !important;
}

/* Ensure app tab labels are not too close to the icon. */
.tab-label[pinned] {
    margin: 2px 6px !important;
    width: 100%;
    position: relative !important;
}

.tabbrowser-tab[pinned]:before {
    position: relative !important;
}

.tabbrowser-tab[pinned][titlechanged] > .tab-stack > .tab-content {
    background-image: none !important;
}

.tabbrowser-tab[pinned][titlechanged] .tab-text {
    color: #F1F1F1 !important;
}

.tabbrowser-tab[pinned][titlechanged]:after {
    content: '●' !important;
    width: 18px;
    height: 10px;
    position: absolute !important;
    color: #29B4FF;
    line-height: 15px;
    font-size: 150% !important;
}

/* Tab label is without special decoration except when selected: then
   the text is white and bold. */
.tab-text {
    font-size: 11px;
    font-weight: normal !important;
    color: #BBB !important;
    text-shadow: none !important;
    margin-bottom: 1px;
    text-align: left !important;
}
.tabbrowser-tab[selected="true"] .tab-text,
.tabbrowser-tab[multiselect="true"] .tab-text {
    font-weight: bold !important;
    color: #DDD !important;
    text-shadow: 0 1px #404040 !important;
}


/* Drop indicator for drag'n'drop of tabs */
.tab-drop-indicator {
    list-style-image: url("resource://verticaltabs/skin/osx/dropmarker.png");
    margin-top: -12px !important; /* height of the above image */
    margin-bottom: 0 !important;
}

/* Tab toolbar styling */

#TabsToolbar[tabsontop="false"]:not(:-moz-lwtheme),
#TabsToolbar[tabsontop="false"]:not(:-moz-lwtheme):-moz-window-inactive {
    background: none;
    background-color: #4C9ED9;
}

#verticaltabs-groupbutton {
    /* TODO need icon to symbolize tab group */
    list-style-image: url("chrome://browser/skin/Toolbar.png");
    -moz-image-region: rect(0, 280px, 20px, 260px);
}



/* Personas */

.tabbrowser-tab > .tab-stack > .tab-background > .tab-background-start:-moz-lwtheme-brighttext:not([selected="true"]),
.tabbrowser-tab > .tab-stack > .tab-background > .tab-background-middle:-moz-lwtheme-brighttext:not([selected="true"]),
.tabbrowser-tab > .tab-stack > .tab-background > .tab-background-end:-moz-lwtheme-brighttext:not([selected="true"]),
.tabbrowser-tab > .tab-stack > .tab-background > .tab-background-start:-moz-lwtheme-darktext:not([selected="true"]),
.tabbrowser-tab > .tab-stack > .tab-background > .tab-background-middle:-moz-lwtheme-darktext:not([selected="true"]),
.tabbrowser-tab > .tab-stack > .tab-background > .tab-background-end:-moz-lwtheme-darktext:not([selected="true"]) {
    background-image: none !important;
}


/*** Group related styles ***/

.tabbrowser-tab[verticaltabs-ingroup] {
    padding-left: 20px !important;
}

.tabbrowser-tab[verticaltabs-group] {
    padding-top: 1px !important;
}

.tabbrowser-tab[verticaltabs-group] .tab-close-button {
    opacity: 1 !important;
}

.tabbrowser-tab[verticaltabs-group] .tab-text {
    color: #738192 !important;
    font-weight: bold !important;
    text-transform: uppercase !important;
    text-shadow: 0 1px #ffffff !important;
}
.tabbrowser-tab[selected="true"][verticaltabs-group] .tab-text {
    color: #ffffff !important;
    text-shadow: 0 1px #404040 !important;
}

.verticaltabs-textbox {
    font-size: 11px;
    margin: 0 0 0 6px;
}

.verticaltabs-counter {
    visibility: collapse;
    font-size: 11px;
    margin: 0;
    padding: 0 6px;
    height: 14px;
    max-height: 14px;
    -moz-border-radius: 8px;
    background-color: #91a0c0;
    color: #ffffff;
    font-weight: bold;
    text-shadow: none;
}
.tabbrowser-tab[verticaltabs-collapsed="true"] .verticaltabs-counter {
    visibility: visible;
}
.tabbrowser-tab[selected="true"] .verticaltabs-counter {
    background-color: #ffffff;
    color: #91a0c0;
}
.verticaltabs-counter:-moz-window-inactive {
    background-color: #b5b5b5;
}
.tabbrowser-tab[selected="true"] .verticaltabs-counter:-moz-window-inactive {
    background-color: #ffffff;
    color: #929292;
}

.verticaltabs-droptarget {
    border: 2px solid #577bf3 !important; /* not OSX's colour but Firefox's */
    background: #d0def5 !important;
    -moz-border-radius: 8px !important;
    /* TODO avoid increasing the overall height */
}

.verticaltabs-dropingroup {
    margin-left: 10px !important;
}

.verticaltabs-droptonewgroup {
    /* TODO need icon to symbolize tab group */
    list-style-image: url("chrome://browser/skin/Toolbar.png");
    -moz-image-region: rect(0, 280px, 20px, 260px);
}

.verticaltabs-twisty {
    list-style-image: url("resource://verticaltabs/skin/osx/twisty.png");
    opacity: 0.38;
    -moz-transition-property: -moz-transform;
    -moz-transition-duration: .1s;
}
.tabbrowser-tab[verticaltabs-collapsed="true"] .verticaltabs-twisty {
    -moz-transform: rotate(-90deg);
}

.verticaltabs-twisty:active {
    opacity: 1.0;
}

